--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -1,6 +1,6 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,12 +11,14 @@
         android:id="@+id/rv_list_exercise"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_addworkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_add"
         android:clickable="true"
-        app:fabSize="mini"
+        android:src="@drawable/ic_add"
+        app:fabSize="auto"
         app:layout_anchor="@id/rv_list_exercise"
         app:layout_anchorGravity="bottom|right|end"
         app:rippleColor="@android:color/white" />
