--- a/app/src/main/res/menu/menu_bottom_main.xml
+++ b/app/src/main/res/menu/menu_bottom_main.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_item_workout"
         android:icon="@drawable/ic_workout"
-        android:title="Workout" />
+        android:title="@string/workout" />
     <item android:id="@+id/menu_item_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile"/>
+        android:title="@string/profile"/>
     <item android:id="@+id/menu_item_settings"
         android:icon="@drawable/ic_settings"
-        android:title="Settings"/>
+        android:title="@string/settings"/>
 </menu>
