--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="medium_space">10dp</dimen>
+    <dimen name="small_space">5dp</dimen>
+    <dimen name="workout_details_image_view_width">200dp</dimen>
+    <dimen name="medium_text_size">16sp</dimen>
+    <dimen name="button_corners_radius">5dp</dimen>
 </resources>
