--- a/app/src/main/res/layout/activity_add_workout.xml
+++ b/app/src/main/res/layout/activity_add_workout.xml
@@ -21,7 +21,7 @@
             android:gravity="center"
             android:text="@string/toolbar_title"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
+            android:textSize="@dimen/big_text_size"
             android:textStyle="bold" />
 
         <TextView
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:text="@string/back"
             android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textSize="@dimen/normal_text_size"
             android:textStyle="bold" />
     </android.support.v7.widget.Toolbar>
 
