--- a/app/src/main/res/layout/fragment_workout_details.xml
+++ b/app/src/main/res/layout/fragment_workout_details.xml
@@ -27,7 +27,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="7"
                 android:text="@string/cardio"
-                android:textSize="@dimen/medium_text_size"
+                android:textSize="@dimen/normal_text_size"
                 android:gravity="center"/>
             <ProgressBar
                 android:id="@+id/pb_cardio"
@@ -48,7 +48,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="7"
                 android:text="@string/strength"
-                android:textSize="@dimen/medium_text_size"
+                android:textSize="@dimen/normal_text_size"
                 android:gravity="center"/>
             <ProgressBar
                 android:id="@+id/pb_strength"
@@ -69,7 +69,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="7"
                 android:text="@string/mobility"
-                android:textSize="@dimen/medium_text_size"
+                android:textSize="@dimen/normal_text_size"
                 android:gravity="center"/>
             <ProgressBar
                 android:id="@+id/pb_mobility"
@@ -106,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/total_exercise"
-                android:textSize="@dimen/medium_text_size"
+                android:textSize="@dimen/normal_text_size"
                 android:gravity="center_vertical"/>
             <TextView
                 android:id="@+id/tv_total_time"
@@ -114,7 +114,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/total_time"
                 android:layout_alignParentRight="true"
-                android:textSize="@dimen/medium_text_size"
+                android:textSize="@dimen/normal_text_size"
                 android:gravity="center_vertical"/>
             <View
                 android:layout_width="match_parent"
@@ -124,7 +124,7 @@
         </RelativeLayout>
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_chosen_exercise"
+        android:id="@+id/rv_selected_exercise"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
