--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="medium_space">10dp</dimen>
     <dimen name="small_space">5dp</dimen>
     <dimen name="workout_details_image_view_width">200dp</dimen>
-    <dimen name="medium_text_size">16sp</dimen>
+    <dimen name="normal_text_size">16sp</dimen>
+    <dimen name="big_text_size">20sp</dimen>
     <dimen name="button_corners_radius">5dp</dimen>
+    <dimen name="item_height">56dp</dimen>
 </resources>
