--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -8,7 +8,7 @@
     tools:context="vn.com.hieptt149.workoutmanager.workout.WorkoutFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_list_exercise"
+        android:id="@+id/rv_preview_workout_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
@@ -19,7 +19,7 @@
         android:clickable="true"
         android:src="@drawable/ic_add"
         app:fabSize="auto"
-        app:layout_anchor="@id/rv_list_exercise"
+        app:layout_anchor="@id/rv_preview_workout_list"
         app:layout_anchorGravity="bottom|right|end"
         app:rippleColor="@android:color/white" />
 </android.support.design.widget.CoordinatorLayout>
