--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/medium_space"
-    tools:context="vn.com.hieptt149.workoutmanager.settings.SettingsFragment">
+    tools:context=".home.settings.SettingsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
