--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/medium_space"
-    tools:context="vn.com.hieptt149.workoutmanager.workout.WorkoutFragment">
+    tools:context=".home.workout.WorkoutFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_preview_workout_list"
