--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -6,17 +6,17 @@
     android:padding="@dimen/medium_space"
     android:weightSum="10">
 
-    <ImageView
-        android:id="@+id/iv_exercise_icon"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2" />
+    <!--<ImageView-->
+        <!--android:id="@+id/iv_exercise_icon"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="2" />-->
 
     <TextView
         android:id="@+id/tv_exercise_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="6"
+        android:layout_weight="9"
         android:text="@string/exercise_name"
         android:textSize="@dimen/normal_text_size"
         android:gravity="center_vertical"/>
@@ -25,6 +25,6 @@
         android:id="@+id/iv_select_exercise"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:src="@drawable/lvllist_add_exercise"/>
 </LinearLayout>
