--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/workout_details_item_width"
-    android:layout_height="@dimen/workout_details_item_height"
-    android:orientation="vertical"
-    android:weightSum="10">
-    <ImageView
-        android:id="@+id/iv_item_preview"
+    android:layout_height="@dimen/workout_details_item_height">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7"/>
-    <TextView
-        android:id="@+id/tv_item_title"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10"
+        android:padding="@dimen/small_space">
+        <ImageView
+            android:id="@+id/iv_item_preview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="7"/>
+        <TextView
+            android:id="@+id/tv_item_title"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:gravity="center"/>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
