--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -3,13 +3,14 @@
     android:layout_width="@dimen/workout_details_item_width"
     android:layout_height="@dimen/workout_details_item_height">
     <LinearLayout
+        android:id="@+id/ln_preview_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="10"
         android:padding="@dimen/small_space">
         <ImageView
-            android:id="@+id/iv_item_preview"
+            android:id="@+id/iv_preview_item"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="7"/>
