--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,162 +1,206 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:weightSum="10"
     android:padding="@dimen/medium_space"
+    android:weightSum="10"
     tools:context="vn.com.hieptt149.workoutmanager.addworkout.WorkoutDetailsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:weightSum="10"
-        android:gravity="center">
+        android:weightSum="10">
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2.5"
             android:orientation="vertical"
-            android:weightSum="10"
-            android:padding="@dimen/small_space">
+            android:padding="@dimen/small_space"
+            android:weightSum="10">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
+                android:gravity="center"
                 android:text="@string/cardio"
-                android:textSize="@dimen/normal_text_size"
-                android:gravity="center"/>
+                android:textSize="@dimen/normal_text_size" />
+
             <ProgressBar
                 android:id="@+id/pb_cardio"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:max="100"/>
+                android:max="100" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2.5"
             android:orientation="vertical"
-            android:weightSum="10"
-            android:padding="@dimen/small_space">
+            android:padding="@dimen/small_space"
+            android:weightSum="10">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
+                android:gravity="center"
                 android:text="@string/strength"
-                android:textSize="@dimen/normal_text_size"
-                android:gravity="center"/>
+                android:textSize="@dimen/normal_text_size" />
+
             <ProgressBar
                 android:id="@+id/pb_strength"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:max="100"/>
+                android:max="100" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2.5"
             android:orientation="vertical"
-            android:weightSum="10"
-            android:padding="@dimen/small_space">
+            android:padding="@dimen/small_space"
+            android:weightSum="10">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
+                android:gravity="center"
                 android:text="@string/mobility"
-                android:textSize="@dimen/normal_text_size"
-                android:gravity="center"/>
+                android:textSize="@dimen/normal_text_size" />
+
             <ProgressBar
                 android:id="@+id/pb_mobility"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:max="100"/>
+                android:max="100" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_marginTop="@dimen/medium_space"
+        android:layout_weight="4"
         android:orientation="vertical"
-        android:weightSum="10"
-        android:layout_marginTop="@dimen/medium_space">
+        android:weightSum="10">
+
         <ImageView
             android:id="@+id/iv_choose_icon"
             android:layout_width="@dimen/workout_details_image_view_width"
             android:layout_height="0dp"
-            android:layout_weight="6"
             android:layout_gravity="center"
-            android:src="@drawable/proteins"/>
+            android:layout_weight="8"
+            android:src="@drawable/proteins" />
+
         <TextView
             android:id="@+id/tv_click_to_choose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_space"
             android:gravity="center"
             android:text="@string/click_iv_to_choose"
             android:textStyle="italic"
-            android:visibility="gone"/>
+            android:visibility="gone" />
+
         <EditText
             android:id="@+id/edt_title"
             android:layout_width="@dimen/workout_details_image_view_width"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_gravity="center"
             android:backgroundTint="@android:color/transparent"
-            android:hint="Workout Name"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2">
-            <TextView
-                android:id="@+id/tv_total_exercise"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/total_exercise"
-                android:textSize="@dimen/normal_text_size"
-                android:gravity="center_vertical"/>
-            <TextView
-                android:id="@+id/tv_total_time"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/total_time"
-                android:layout_alignParentRight="true"
-                android:textSize="@dimen/normal_text_size"
-                android:gravity="center_vertical"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
-                android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
+            android:gravity="center"
+            android:hint="Workout Name" />
+
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_preview_selected_exercise"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
+        android:layout_weight="3">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="10">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2">
+
+                <TextView
+                    android:id="@+id/tv_total_exercise"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="@string/total_exercise"
+                    android:textSize="@dimen/normal_text_size" />
+
+                <TextView
+                    android:id="@+id/tv_total_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center_vertical"
+                    android:text="@string/total_time"
+                    android:textSize="@dimen/normal_text_size" />
+
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@android:color/darker_gray" />
+            </RelativeLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_preview_selected_exercise"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/view"
+                android:layout_weight="8"
+                android:layout_marginTop="@dimen/small_space"
+                android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_exercise_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
+
         <Button
             android:id="@+id/btn_add_exercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/medium_space"
-            android:text="@string/add_exercise"
             android:layout_centerInParent="true"
             android:background="@drawable/bg_button"
-            android:textColor="@android:color/white"/>
+            android:padding="@dimen/medium_space"
+            android:text="@string/add_exercise"
+            android:textColor="@android:color/white" />
     </RelativeLayout>
 </LinearLayout>
