--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/workout_details_item_width"
-    android:layout_height="@dimen/workout_details_item_height">
+    android:layout_height="@dimen/workout_details_item_height"
+    app:cardCornerRadius="@dimen/small_space"
+    app:cardUseCompatPadding="true">
+
     <LinearLayout
         android:id="@+id/ln_preview_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="10"
-        android:padding="@dimen/small_space">
+        android:padding="@dimen/small_space"
+        android:weightSum="10">
+
         <ImageView
             android:id="@+id/iv_preview_item"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="7"/>
+            android:layout_weight="7" />
+
         <TextView
             android:id="@+id/tv_item_title"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:gravity="center"/>
+            android:gravity="center" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
