--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -102,7 +102,7 @@
 
         <ImageView
             android:id="@+id/iv_choose_icon"
-            android:layout_width="@dimen/workout_details_image_view_width"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_weight="8"
@@ -134,6 +134,7 @@
         android:layout_weight="3">
 
         <LinearLayout
+            android:id="@+id/ln_exercises_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -181,14 +182,20 @@
                 android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_exercise_description"
+        <ScrollView
+            android:id="@+id/sv_description_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/tv_exercise_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </ScrollView>
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_btn_add_exercise_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
