--- a/app/src/main/res/layout/fragment_login_dialog.xml
+++ b/app/src/main/res/layout/fragment_login_dialog.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="vn.com.hieptt149.workoutmanager.home.LoginDialogFragment">
+    tools:context="vn.com.hieptt149.workoutmanager.home.fragment.LoginDialogFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
