--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/medium_space"
-    tools:context=".home.profile.ProfileFragment">
+    tools:context=".home.fragment.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
