--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -114,8 +114,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/click_iv_to_choose"
-            android:textStyle="italic"
-            android:visibility="gone" />
+            android:textStyle="italic"/>
 
         <EditText
             android:id="@+id/edt_title"
