--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:gravity="center" />
+            android:gravity="center_horizontal"
+            android:ellipsize="end"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
