--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -38,7 +38,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                android:max="100" />
+                android:max="100"
+                android:indeterminate="false"/>
         </LinearLayout>
 
         <LinearLayout
@@ -63,7 +64,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                android:max="100" />
+                android:max="100"
+                android:indeterminate="false"/>
         </LinearLayout>
 
         <LinearLayout
@@ -88,7 +90,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                android:max="100" />
+                android:max="100"
+                android:indeterminate="false"/>
         </LinearLayout>
     </LinearLayout>
 
