--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -3,20 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height"
     android:orientation="horizontal"
-    android:padding="@dimen/medium_space"
+    android:padding="@dimen/small_space"
     android:weightSum="10">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/iv_exercise_icon"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_weight="2" />-->
+    <ImageView
+        android:id="@+id/iv_exercise_icon"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2" />
 
     <TextView
         android:id="@+id/tv_exercise_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="9"
+        android:layout_weight="7"
         android:text="@string/exercise_name"
         android:textSize="@dimen/normal_text_size"
         android:gravity="center_vertical"/>
