--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="item_height">56dp</dimen>
     <dimen name="workout_details_item_width">125dp</dimen>
     <dimen name="workout_details_item_height">150dp</dimen>
+    <dimen name="select_icon_dialog_width">300dp</dimen>
+    <dimen name="select_icon_dialog_height">400dp</dimen>
+    <dimen name="select_icon_item_dimen">100dp</dimen>
 </resources>
