--- a/app/src/main/res/layout/dialog_fragment_select_icon.xml
+++ b/app/src/main/res/layout/dialog_fragment_select_icon.xml
@@ -13,6 +13,7 @@
         android:gravity="center"
         android:numColumns="auto_fit"
         android:verticalSpacing="@dimen/medium_space"
-        android:horizontalSpacing="@dimen/small_space"></GridView>
+        android:horizontalSpacing="@dimen/small_space"
+        android:columnWidth="@dimen/select_icon_item_dimen"></GridView>
 
 </LinearLayout>
