--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -7,10 +7,14 @@
     android:padding="@dimen/medium_space"
     tools:context=".home.fragment.WorkoutFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_preview_workout"
+    <GridView
+        android:id="@+id/gv_preview_workout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:columnWidth="@dimen/workout_details_item_width"
+        android:horizontalSpacing="@dimen/small_space"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="@dimen/small_space"></GridView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_addworkout"
@@ -19,7 +23,7 @@
         android:clickable="true"
         android:src="@drawable/ic_add"
         app:fabSize="auto"
-        app:layout_anchor="@id/rv_preview_workout"
+        app:layout_anchor="@id/gv_preview_workout"
         app:layout_anchorGravity="bottom|right|end"
         app:rippleColor="@android:color/white" />
 </android.support.design.widget.CoordinatorLayout>
