--- a/app/src/main/res/layout/activity_add_workout.xml
+++ b/app/src/main/res/layout/activity_add_workout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="vn.com.hieptt149.workoutmanager.addworkout.AddWorkoutActivity">
+    tools:context="vn.com.hieptt149.workoutmanager.workoutdetails.AddWorkoutActivity">
 
 
     <android.support.v7.widget.Toolbar
