--- a/app/src/main/res/layout/fragment_add_exercise.xml
+++ b/app/src/main/res/layout/fragment_add_exercise.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="vn.com.hieptt149.workoutmanager.addworkout.fragment.AddExerciseFragment">
+    tools:context="vn.com.hieptt149.workoutmanager.workoutdetails.fragment.AddExerciseFragment">
 
     <View
         android:layout_width="match_parent"
