--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="@dimen/medium_space"
     android:weightSum="10"
-    tools:context="vn.com.hieptt149.workoutmanager.addworkout.fragment.WorkoutDetailsFragment">
+    tools:context="vn.com.hieptt149.workoutmanager.workoutdetails.fragment.WorkoutDetailsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -109,7 +109,8 @@
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_weight="5"
-            android:src="@drawable/no_image"/>
+            android:src="@drawable/no_image"
+            android:tag="no_image"/>
 
         <TextView
             android:id="@+id/tv_click_to_choose"
