--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -19,7 +19,8 @@
         android:layout_weight="7"
         android:text="@string/exercise_name"
         android:textSize="@dimen/normal_text_size"
-        android:gravity="center_vertical"/>
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/medium_space"/>
 
     <ImageView
         android:id="@+id/iv_select_exercise"
