--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="large_space">16sp</dimen>
     <dimen name="medium_space">10dp</dimen>
     <dimen name="small_space">5dp</dimen>
     <dimen name="small_text_size">12sp</dimen>
