--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,7 +89,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/small_space"
             android:text="@string/forgot_password"
-            android:textSize="@dimen/normal_text_size" />
+            android:textSize="@dimen/normal_text_size"
+            android:textStyle="italic"/>
 
         <TextView
             android:id="@+id/tv_back"
@@ -98,6 +99,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/small_space"
             android:text="@string/back"
-            android:textSize="@dimen/normal_text_size" />
+            android:textSize="@dimen/normal_text_size"
+            android:textStyle="italic"/>
     </LinearLayout>
 </LinearLayout>
