--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="select_icon_dialog_height">300dp</dimen>
     <dimen name="select_icon_item_dimen">60dp</dimen>
     <dimen name="user_info_dialog_width">300dp</dimen>
+    <dimen name="user_setting_item_height">150dp</dimen>
 </resources>
