--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,7 +15,7 @@
             android:layout_height="@dimen/user_setting_item_height"
             android:orientation="horizontal"
             android:weightSum="10"
-            android:padding="@dimen/medium_space">
+            android:padding="@dimen/small_space">
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -41,6 +41,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/age"
+                    android:textSize="@dimen/normal_text_size"/>
+                <TextView
+                    android:id="@+id/tv_users_gender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/gender"
                     android:textSize="@dimen/normal_text_size"/>
                 <TextView
                     android:id="@+id/tv_users_height"
