--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="workout_details_image_view_width">200dp</dimen>
     <dimen name="button_corners_radius">5dp</dimen>
     <dimen name="item_height">56dp</dimen>
+    <dimen name="activity_toolbar_title_width">200dp</dimen>
     <dimen name="workout_details_item_width">125dp</dimen>
     <dimen name="workout_details_item_height">150dp</dimen>
     <dimen name="select_icon_dialog_width">300dp</dimen>
@@ -16,4 +17,6 @@
     <dimen name="select_icon_item_dimen">60dp</dimen>
     <dimen name="user_info_dialog_width">300dp</dimen>
     <dimen name="user_setting_item_height">150dp</dimen>
+    <dimen name="time_practiced_text_size">40sp</dimen>
+    <dimen name="exercise_name_text_size">40sp</dimen>
 </resources>
