--- a/app/src/main/res/layout/dialog_user_info.xml
+++ b/app/src/main/res/layout/dialog_user_info.xml
@@ -16,6 +16,25 @@
         android:textSize="@dimen/big_text_size"
         android:textStyle="bold" />
 
+    <RadioGroup
+        android:id="@+id/rdgr_gender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium_space"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <RadioButton
+            android:id="@+id/rdbtn_male"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/male"/>
+        <RadioButton
+            android:id="@+id/rdbtn_female"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/female"/>
+    </RadioGroup>
+
     <EditText
         android:id="@+id/edt_name"
         android:layout_width="match_parent"
