--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -170,7 +170,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4">
+        android:layout_weight="3.5">
 
         <LinearLayout
             android:id="@+id/ln_exercises_info"
@@ -230,12 +230,15 @@
             android:id="@+id/sv_description_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:paddingLeft="@dimen/large_space"
+            android:paddingRight="@dimen/large_space">
 
             <TextView
                 android:id="@+id/tv_exercise_description"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/normal_text_size"/>
         </ScrollView>
     </RelativeLayout>
 
@@ -243,7 +246,7 @@
         android:id="@+id/rl_btn_add_exercise_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1.5">
 
         <Button
             android:id="@+id/btn_add_exercise"
