--- a/app/src/main/res/menu/menu_bottom_main.xml
+++ b/app/src/main/res/menu/menu_bottom_main.xml
@@ -4,9 +4,9 @@
     <item android:id="@+id/menu_item_workout"
         android:icon="@drawable/ic_workout"
         android:title="@string/workout" />
-    <item android:id="@+id/menu_item_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/profile"/>
+    <item android:id="@+id/menu_item_history"
+        android:icon="@drawable/ic_history"
+        android:title="@string/history"/>
     <item android:id="@+id/menu_item_settings"
         android:icon="@drawable/ic_settings"
         android:title="@string/settings"/>
